--- a/Vinyl/WebContent/css/style.css
+++ b/Vinyl/WebContent/css/style.css
@@ -721,6 +721,11 @@ body {
 	font-size: 80px;
 	color: #FFF;
 }
+
+.thumbnail .glyphicon glyphicon-star{
+	padding-left:40%;
+}
+
 .about-list li .thumbnail .caption {
 	padding: 0;
 }
@@ -2461,5 +2466,4 @@ body {
 }
 .footer .span3 {
 	margin-bottom: 20px;
-}
 }
