--- a/Vinyl/WebContent/css/style.css
+++ b/Vinyl/WebContent/css/style.css
@@ -606,8 +606,8 @@ body {
 }
 
 #quantite{
-	width:30px;
-	margin-left:52%;
+	width:50px;
+	margin-left:43%;
 }
 
 /*Search barre de navigation*/
@@ -1110,11 +1110,11 @@ address a:hover {
 	-o-transition: all linear 0.25s;
 }
 .products-list li:hover .thumbnail a.thumb img {
-	transform: rotate(-10deg);
+	/*transform: rotate(-10deg);
 	-ms-transform: rotate(-10deg);
 	-moz-transform: rotate(-10deg);
 	-webkit-transform: rotate(-10deg);
-	-o-transform: rotate(-10deg);
+	-o-transform: rotate(-10deg);*/
 }
 .products-list li .thumbnail a.folio {
 	display: block;
