--- a/Vinyl/WebContent/css/bootstrap.css
+++ b/Vinyl/WebContent/css/bootstrap.css
@@ -5730,6 +5730,7 @@ button.close {
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   outline: 0;
+  color:black!important;
 }
 .modal.fade .modal-dialog {
   -webkit-transition: -webkit-transform .3s ease-out;
@@ -5799,6 +5800,7 @@ button.close {
 .modal-body {
   position: relative;
   padding: 15px;
+  background:#FFA500;
 }
 .modal-footer {
   padding: 15px;
